# noc_toolbox

./: .gitignore  README.md  environment.yaml  pyproject.toml  pytest.toml  requirements.txt
.github/workflows/: buildDocs.yml
docs/: conf.py  requirements.txt
examples/configs/: MissionControl.yaml  all_step_configs.yaml  example_config.yaml  example_config_churchill.yaml  example_config_doombar.yaml  example_config_nelson.yaml  test_config.yaml
examples/notebooks/: demoNotebook.ipynb
src/: some_name.yaml  voto_steps.yaml
src/toolbox/: main.py  pipeline.py
src/toolbox/steps/: __init__.py  base_step.py  base_test.py
src/toolbox/steps/custom/: apply_qc.py  argo_qc.py  blank_step.py  derive_cdt.py  derive_ctd.py  export.py  find_profiles.py  gen_data.py  interpolate_data.py  load_data.py  profile_direction.py  qc.py  step_configs.yaml  write_report.py
src/toolbox/steps/custom/qc/: archive.py  blank_test.py  impossible_date_test.py  impossible_location_test.py  impossible_speed_test.py  par_irregularity_test.py  position_on_land_test.py  pressure_range_test.py  range_test.py  spike_test.py  stuck_value_test.py  valid_profile_test.py
src/toolbox/steps/custom/variables/: bbp.py  chla.py  oxygen.py  salinity.py
src/toolbox/utils/: alignment.py  diagnostics.py  processing_utils.py  qc_handling.py  time.py
tests/: test_write_report.py
