[project]
name = "noc-toolbox"
version = "0.0.1"
description = "A glider processing package written in Python by the NOC."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["glider", "qc"]

requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {}
